--- a/css/music.css
+++ b/css/music.css
@@ -1,6 +1,6 @@
 #music-region {
   position: fixed;
-  bottom: 68px;
+  bottom: 80px;
   right: 16px;
   z-index: 12;
   width: 260px;
